Master-Datei mit allen persönlichen Daten ausgefüllt

--- a/arbeit/config.tex
+++ b/arbeit/config.tex
@@ -114,20 +114,20 @@
 \ofoot[\rule{0pt}{\ht\strutbox+\dp\strutbox}\pagemark]{\rule{0pt}{\ht\strutbox+\dp\strutbox}\pagemark}
 \ohead{\headmark}
 
-\newcommand{\TitelDerArbeit}[1]{\def\DerTitelDerArbeit{#1}\hypersetup{pdftitle={#1}}}
-\newcommand{\AutorDerArbeit}[1]{\def\DerAutorDerArbeit{#1}\hypersetup{pdfauthor={#1}}}
-\newcommand{\Firma}[1]{\def\DerNameDerFirma{#1}}
-\newcommand{\Kurs}[1]{\def\DieKursbezeichnung{#1}}
-\newcommand{\Abteilung}[1]{\def\DerNameDerAbteilung{#1}}
-\newcommand{\Studiengangsleiter}[1]{\def\DerStudiengangsleiter{#1}}
-\newcommand{\WissBetreuer}[1]{\def\DerWissBetreuer{#1}}
-\newcommand{\FirmenBetreuer}[1]{\def\DerFirmenBetreuer{#1}}
-\newcommand{\Bearbeitungszeitraum}[1]{\def\DerBearbeitungszeitraum{#1}}
-\newcommand{\Abgabedatum}[1]{\def\DasAbgabedatum{#1}}
-\newcommand{\Matrikelnummer}[1]{\def\DieMatrikelnummer{#1}}
-\newcommand{\Studienrichtung}[1]{\def\DieStudienrichtung{#1}}
+\renewcommand{\TitelDerArbeit}[1]{\def\DerTitelDerArbeit{#1}\hypersetup{pdftitle={#1}}}
+\renewcommand{\AutorDerArbeit}[1]{\def\DerAutorDerArbeit{#1}\hypersetup{pdfauthor={#1}}}
+\renewcommand{\Firma}[1]{\def\DerNameDerFirma{#1}}
+\renewcommand{\Kurs}[1]{\def\DieKursbezeichnung{#1}}
+\renewcommand{\Abteilung}[1]{\def\DerNameDerAbteilung{#1}}
+\renewcommand{\Studiengangsleiter}[1]{\def\DerStudiengangsleiter{#1}}
+\renewcommand{\WissBetreuer}[1]{\def\DerWissBetreuer{#1}}
+\renewcommand{\FirmenBetreuer}[1]{\def\DerFirmenBetreuer{#1}}
+\renewcommand{\Bearbeitungszeitraum}[1]{\def\DerBearbeitungszeitraum{#1}}
+\renewcommand{\Abgabedatum}[1]{\def\DasAbgabedatum{#1}}
+\renewcommand{\Matrikelnummer}[1]{\def\DieMatrikelnummer{#1}}
+\renewcommand{\Studienrichtung}[1]{\def\DieStudienrichtung{#1}}
 \newcommand{\ArtDerArbeit}[1]{\def\DieArtDerArbeit{#1}}
-\newcommand{\Literaturverzeichnis}{Literaturverzeichnis}
+\renewcommand{\Literaturverzeichnis}{Literaturverzeichnis}
 
 \newcommand{\settingBibFootnoteCite}{
 	\setlength{\bibparsep}{\parskip}		  % Add some space between biblatex entries in the bibliography
