--- a/arbeit/master.tex
+++ b/arbeit/master.tex
@@ -130,24 +130,25 @@
 % Elementare Konfigurationen und Definitionen werden geladen 
 % @stud: gegebenenfalls anpassen
 %
+
 \input{config}
 
 % @stud
 %
 % PERSÖNLICHE ANGABEN (BITTE VOLLSTÄNDIG EINGEBEN zwischen den Klammern: {...})
 %
-\ArtDerArbeit{<Bachelor>/<Projekt>} % "Bachelor" oder "Projekt" wählen
-\TitelDerArbeit{<Titel Ihrer Arbeit>}
-\AutorDerArbeit{<Ihr Vor- und Nachname>}
-\Abteilung{<Ihre Abteilung>}
-\Firma{<Ihre Firma>}
-\Kurs{<Ihr Kurs>}
-\Studienrichtung{<Ihre Studienrichtung>}
-\Matrikelnummer{<Ihre Martikelnummer>}
-\Studiengangsleiter{<Ihr Studiengangsleiter>}
+\ArtDerArbeit{Praxis} % "Bachelor" oder "Projekt" wählen
+\TitelDerArbeit{Evaluierung des KI-Einsatzes zur nachhaltigen Materialentwicklung mit einem PLM-System }
+\AutorDerArbeit{Maksym Mykhailych}
+\Abteilung{Product Lifecycle Management/Digital Manufacturing}
+\Firma{Capgemini Deutschland GmbH}
+\Kurs{TINF24IT1}
+\Studienrichtung{Informationstechnik}
+\Matrikelnummer{9592553}
+\Studiengangsleiter{Prof. Dr. Gerhard Holger}
 \WissBetreuer{<Ihr(e) wissenschaftliche(r) Betreuer(in)>}
-\FirmenBetreuer{<Ihr(e) Firmenbetreuer(in)>}
-\Bearbeitungszeitraum{dd.mm.yyyy -- DD.MM.YYYY}
+\FirmenBetreuer{Alexander Zitterbart}
+\Bearbeitungszeitraum{14.01.2026 -- DD.MM.YYYY}
 \Abgabedatum{dd.mm.yyyy}
 
 \begin{document}
@@ -240,7 +241,7 @@
 \input{introduction}
 
 % mehrere Grundlagen- und Forschungs-Kapitel
-\input{chapter1}
+\input{Grundlage}
 \input{chapter2}
 
 % Fazit und Ausblick
