--- a/arbeit/titlepage.tex
+++ b/arbeit/titlepage.tex
@@ -3,7 +3,7 @@
 \begin{titlepage}
 \begin{minipage}{\textwidth}
 		\vspace{-2cm}
-		\noindent \includegraphics[scale=0.25]{\imagedir/firmenlogo.jpg} \hfill \includegraphics{\imagedir/logo.jpg}
+		\noindent \includegraphics[scale=0.04]{\imagedir/firmenlogo.png} \hfill \includegraphics{\imagedir/logo.jpg}
 \end{minipage}
 \vspace{1em}
 %\sffamily
@@ -11,7 +11,7 @@
 	{\textsf{\large Duale Hochschule Baden-W\"urttemberg Mannheim}}\\[4em]
 	{\textsf{\textbf{\large{\DieArtDerArbeit}arbeit}}}\\[6mm]
 	{\textsf{\textbf{\Large{}\DerTitelDerArbeit}}} \\[1.5cm]
-	{\textsf{\textbf{\large{}Studiengang Wirtschaftsinformatik}}\\[6mm]
+	{\textsf{\textbf{\large{}Studiengang Informatik}}\\[6mm]
 	\textsf{\textbf{Studienrichtung \DieStudienrichtung}}}\vspace{10em}
 	
 	\begin{minipage}{\textwidth}
