--- a/arbeit/bibliography.bib
+++ b/arbeit/bibliography.bib
@@ -50,3 +50,22 @@ number = 1 }
 	organization = {{Deutsches Institut für Normung}}
 }
 
+@article{grieves2005product,
+	title={Product lifecycle management: the new paradigm for enterprises},
+	author={Grieves, Michael W},
+	journal={International Journal of Product Development},
+	volume={2},
+	number={1-2},
+	pages={71--84},
+	year={2005},
+	publisher={Inderscience Publishers}
+}
+
+@incollection{stark2022product,
+	title={Product lifecycle management (PLM)},
+	author={Stark, John},
+	booktitle={Product lifecycle management (volume 1) 21st Century paradigm for product realisation},
+	pages={1--32},
+	year={2022},
+	publisher={Springer}
+}
