First Part of PLM completed

--- a/arbeit/Grundlage.tex
+++ b/arbeit/Grundlage.tex
@@ -4,10 +4,23 @@ Für eine nachvollziehbare Darstellung des Entwicklungsprozesses ist es erforder
 \section{Einführung in das Product Lifecycle Management}
 Product Lifecycle Management (PLM) bezeichnet die unternehmerische Tätigkeit, Produkte eines Unternehmens über ihren gesamten Lebenszyklus hinweg effizient zu steuern und zu verwalten – von der ersten Produktidee über Entwicklung, Markteinführung und Nutzung bis hin zur Außerbetriebnahme und Entsorgung. Dabei umfasst PLM sowohl die Verwaltung einzelner Produkte als auch des gesamten Produktportfolios, also der Gesamtheit aller im Unternehmen angebotenen Produkte.
 Der Fokus liegt auf der Begleitung der Produkte von der frühen Entwicklungsphase über Wachstums- und Reifephasen bis zum Ende ihres Lebenszyklus. Ziel des PLM ist es, Produktumsätze zu steigern, produktbezogene Kosten zu reduzieren, den Wert des Produktportfolios zu maximieren und sowohl für Kunden als auch für Anteilseigner einen nachhaltigen Mehrwert aus bestehenden und zukünftigen Produkten zu schaffen. \cite{stark2022product}
-In 
-\subsection{Grundlage zu PLM-Systeme}
+
+\subsection{Porduct lifecycle Phases}
+Der Lebenszyklus eines Produkts lässt sich in fünf Phasen(\ref{PLM-Phases}) unterteilen, in denen sich das Produkt jeweils in einem unterschiedlichen Zustand befindet. In der Planen‑Phase existiert das Produkt zunächst ausschließlich als Idee. In der anschließenden Entwurfsphase werden diese Ideen in eine konkrete und detaillierte Beschreibung überführt. Mit Abschluss der "Bauen"-phase liegt das Produkt in seiner endgültigen Form vor, sodass es von Kunden genutzt werden kann, beispielsweise als serienreifes Fahrzeug. In der Nutzungs- und Servicephase befindet sich das Produkt beim Kunden und wird aktiv eingesetzt sowie gewartet. Schließlich erreicht das Produkt die End-of-Life‑Phase, in der es aus wirtschaftlichen oder technischen Gründen nicht mehr genutzt wird, vom Unternehmen außer Betrieb genommen und vom Kunden entsorgt oder recycelt wird. \cite{stark2011product}
+
+\begin{figure}[h] % h = here (hier), t = top, b = bottom
+	\centering
+	\includegraphics[width=0.6\textwidth]{\imagedir/Drawing 17.png} % Bildname ohne Endung
+	\caption{Abbildung der PLM-Phase \cite{corallo2013defining}}
+	\label{PLM-Phases}
+\end{figure}
+Um einen reibungslosen Ablauf sicherzustellen und den wirtschaftlichen Erfolg des Produkts zu gewährleisten, ist eine durchgängige Steuerung über alle Lebenszyklusphasen hinweg erforderlich. Dieses ganzheitliche Management wird häufig als Betreuung des Produkts „von der Wiege bis zur Bahre“ beschrieben.
+Die ersten drei Phasen – Imagination, Definition und Realisierung – bilden zusammen den Beginning‑ofLife (BOL) eines Produkts. Die Middle‑of‑Life‑Phase (MOL) umfasst Aktivitäten wie Nutzung, Support und Instandhaltung. Die End‑of‑Life‑Phase (EOL) schließt Prozesse wie Produktabkündigung, Entsorgung und Recycling ein.
+\section{Grundlage zu PLM-Systeme}
+Der Markt bietet eine Vielzahl unterschiedlicher PLM‑Systeme. Für die vorliegende Arbeit ist jedoch ausschließlich die 3DEXPERIENCE‑Plattform des Unternehmens Dassault Systèmes von besonderer Relevanz.
 
 \subsection{3DExpirience-Plattform}
+\subsection{PLM/ERP/MES-Dreieck}
 
 \subsection{Künstliche Intelligenz für PLM}
 
