--- a/arbeit/bibliography.bib
+++ b/arbeit/bibliography.bib
@@ -69,3 +69,27 @@ number = 1 }
 	year={2022},
 	publisher={Springer}
 }
+@incollection{stark2011product,
+	title={Product lifecycle management},
+	author={Stark, John},
+	booktitle={Product Lifecycle Management: 21st century paradigm for product realisation},
+	pages={1--16},
+	year={2011},
+	publisher={Springer}
+}
+@book{saaksvuori2005product,
+	title={Product lifecycle management},
+	author={Saaksvuori, Antti and Immonen, Anselmi},
+	year={2005},
+	publisher={Springer}
+}
+@article{corallo2013defining,
+	title={Defining product lifecycle management: a journey across features, definitions, and concepts},
+	author={Corallo, Angelo and Latino, Maria Elena and Lazoi, Mariangela and Lettera, Serena and Marra, Manuela and Verardi, Sabrina},
+	journal={International Scholarly Research Notices},
+	volume={2013},
+	number={1},
+	pages={170812},
+	year={2013},
+	publisher={Wiley Online Library}
+}
